--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <div class="button-line">
       <hr class="line">
-      <button onclick="calculateAge()" class="button"><svg xmlns="http://www.w3.org/2000/svg" class="svg-class" viewBox="0 0 44 44"><g fill="none" stroke="#FFF" class="g-class"><path d="M1 22.019C8.333 21.686 23 25.616 23 44M23 44V0M45 22.019C37.667 21.686 23 25.616 23 44"/></g></svg></button>
+      <button onclick="calculateAge()" class="button" aria-label="Calculate Age"><svg xmlns="http://www.w3.org/2000/svg" class="svg-class" viewBox="0 0 44 44"><g fill="none" stroke="#FFF" class="g-class"><path d="M1 22.019C8.333 21.686 23 25.616 23 44M23 44V0M45 22.019C37.667 21.686 23 25.616 23 44"/></g></svg></button>
     </div>
 
     <h1 class="result"><span id="age_year" class="result-amount">--</span> years</h1>
